crates/sqlcx-core/src/generator/rust_lang/snapshots/sqlcx_core__generator__rust_lang__sqlx_driver__tests__sqlx_sqlite_queries.snap
---
source: crates/sqlcx-core/src/generator/rust_lang/sqlx_driver.rs
expression: content
---
// Code generated by sqlcx. DO NOT EDIT.

use sqlx;

pub const GET_USER_SQL: &str = "SELECT * FROM users WHERE id = ?";

#[derive(Debug, Clone, sqlx::FromRow)]
pub struct GetUserRow {
    pub id: i32,
    pub name: String,
    pub email: String,
    pub bio: Option<String>,
    pub status: String,
    pub tags: Option<Vec<String>>,
    pub created_at: chrono::NaiveDateTime,
}

pub async fn get_user(pool: &sqlx::SqlitePool, id: i32) -> Result<Option<GetUserRow>, sqlx::Error> {
    sqlx::query_as::<_, GetUserRow>(GET_USER_SQL)
        .bind(id)
        .fetch_optional(pool)
        .await
}

pub const LIST_USERS_SQL: &str = "SELECT id, name, email FROM users WHERE name ILIKE ?";

#[derive(Debug, Clone, sqlx::FromRow)]
pub struct ListUsersRow {
    pub id: i32,
    pub name: String,
    pub email: String,
}

pub async fn list_users(pool: &sqlx::SqlitePool, name: &str) -> Result<Vec<ListUsersRow>, sqlx::Error> {
    sqlx::query_as::<_, ListUsersRow>(LIST_USERS_SQL)
        .bind(name)
        .fetch_all(pool)
        .await
}

pub const CREATE_USER_SQL: &str = "INSERT INTO users (name, email, bio) VALUES (?, ?, ?)";

pub async fn create_user(pool: &sqlx::SqlitePool, name: &str, email: &str, bio: &str) -> Result<(), sqlx::Error> {
    sqlx::query(CREATE_USER_SQL)
        .bind(name)
        .bind(email)
        .bind(bio)
        .execute(pool)
        .await
        .map(|_| ())
}

pub const DELETE_USER_SQL: &str = "DELETE FROM users WHERE id = ?";

#[derive(Debug, Clone)]
pub struct DeleteUserResult {
    pub rows_affected: u64,
}

pub async fn delete_user(pool: &sqlx::SqlitePool, id: i32) -> Result<DeleteUserResult, sqlx::Error> {
    let result = sqlx::query(DELETE_USER_SQL)
        .bind(id)
        .execute(pool)
        .await?;
    Ok(DeleteUserResult { rows_affected: result.rows_affected() })
}

pub const LIST_USERS_BY_DATE_RANGE_SQL: &str = "SELECT * FROM users WHERE created_at > ? AND created_at < ?";

#[derive(Debug, Clone, sqlx::FromRow)]
pub struct ListUsersByDateRangeRow {
    pub id: i32,
    pub name: String,
    pub email: String,
    pub bio: Option<String>,
    pub status: String,
    pub tags: Option<Vec<String>>,
    pub created_at: chrono::NaiveDateTime,
}

pub async fn list_users_by_date_range(pool: &sqlx::SqlitePool, start_date: chrono::NaiveDateTime, end_date: chrono::NaiveDateTime) -> Result<Vec<ListUsersByDateRangeRow>, sqlx::Error> {
    sqlx::query_as::<_, ListUsersByDateRangeRow>(LIST_USERS_BY_DATE_RANGE_SQL)
        .bind(start_date)
        .bind(end_date)
        .fetch_all(pool)
        .await
}
